# google-music-manager-downloader

./: .gitignore  CONTRIBUTING.md  LICENSE  README.rst  setup.cfg
.github/: ISSUE_TEMPLATE.md
.github/workflows/: build.yml
google_music_manager_downloader/: __init__.py  download.py
