[metadata]
name = google_music_manager_downloader
version = attr: google_music_manager_downloader.__version__
description = Google MusicManager package to manage your music library to Google Music - Download module
long_description = file: README.rst
author = Jay MOULIN
author_email = jay@femtopixel.com
url = https://github.com/jaymoulin/google-music-manager-downloader/
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Communications :: File Sharing
    Topic :: Artistic Software
    Topic :: Internet :: File Transfer Protocol (FTP)
    Topic :: Home Automation
    Topic :: Internet
    Topic :: Multimedia :: Sound/Audio

[options]
include_package_data = True
packages = find:
install_requires =
    google_music_manager_auth
    netifaces
python_requires = >=3

[options.entry_points]
console_scripts =
    google-music-download = google_music_manager_downloader.download:main
